<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- EditText untuk input angka pertama -->
    <EditText
        android:id="@+id/etNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Masukkan angka pertama"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp" />

    <!-- EditText untuk input angka kedua -->
    <EditText
        android:id="@+id/etNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="Masukkan angka kedua"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp" />

    <!-- Tombol untuk operasi tambah -->
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/color"
        android:text="@string/tambah" />

    <!-- Tombol untuk operasi kurang -->
    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/color"
        android:text="Kurang" />

    <!-- Tombol untuk operasi kali -->
    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/color"
        android:text="Kali" />

    <!-- Tombol untuk operasi bagi -->
    <Button
        android:id="@+id/btnDivide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/color"
        android:text="Bagi" />

    <!-- TextView untuk menampilkan hasil perhitungan -->
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Hasil: "
        android:textSize="20dp" />

</LinearLayout>
